[add]ヘッダーのレイアウト調整

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,28 +4,56 @@
   margin:0;
   padding:0;
   box-sizing:border-box;
+  color: #6c6b6b;
+}
+
+a{
+  text-decoration:none;
 }
 
 header{
-  display: flex;
+  width:100%;
+  // // height:120px;　反映なし
+  padding:15px 0;
+  margin:0 auto;
+  height:150px;
+  // display: flex;
+  border-bottom:solid 1px #00ced1;
 }
 
-.logo{
-  margin:20px 0 0 30px;
-  float:left;
+.navbar-brand{
+  margin-bottom:20px;  
 }
 
-ul.list {
-  display: flex;
-  justify-content: flex-end;
-  list-style: none;
+.search{
+  margin-left:50px;
+  margin-top:50px;
 }
 
-li {
-  padding: 0 10px;
-  margin-top:30px;
+.nav-list-item {
+  padding: 0 30px;
+  margin-top:60px;
+  border-left:solid 1px #00ced1;
+  text-align:center;
+}
+
+.i{
+  width:30px;
+  height:30px;
+}
+
+.image{
+  vertical-align: middle;
 }
 
 footer{
-  
+  width:100%;
+  height:120px;
+  text-align:center;
+  line-height:120px;
+  background-color:#b0e0e6;
+}
+
+.footer-text{
+  color:#4682b4;
 }
