--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,82 +10,74 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <% if admin_signed_in? then %>
-        <div class="logo">
-          <%= link_to admin_posts_path do %>
-            <%= image_tag 'HRC_Logo.png', size: "150x150" %>
-          <% end %>
-        </div>
-        <nav>
-          <div class="menu-list">
-            <ul class="list">
-              <li>
-                <%= link_to "ユーザ一覧", admin_users_path %>
-              </li>
-              <li>
-                <%= link_to "コメント一覧", admin_comments_path %>
-              </li>
-              <li>
-                <%= link_to "ログアウト",destroy_admin_session_path, method: :delete %>
-              </li>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand">
+            <% if admin_signed_in? %>
+              <%= link_to admin_posts_path do %>
+                <%= image_tag 'HRC_Logo.png' %>
+              <% end %>
+            <% else %>
+              <%= link_to root_path do %>
+                <%= image_tag 'HRC_Logo.png' %>
+              <% end %>
+            <% end %>
+          </a>
+          <div class="search">
+            <%= render 'public/searches/search' %>
+            <%= link_to 'カテゴリから選ぶ >>', categories_path %>
+          </div>
+          
+            <ul class="navbar-nav ml-auto">
+              <% if admin_signed_in? then %>
+                <li class="nav-list-item">
+                  <a><%= link_to "ユーザ一覧", admin_users_path %></a>
+                </li>
+                <li class="nav-list-item">
+                  <a><%= link_to "コメント一覧", admin_comments_path %></a>
+                </li>
+                <li class="nav-list-item">
+                  <a><%= link_to "ログアウト",destroy_admin_session_path, method: :delete %></a>
+                </li>
+              <% elsif user_signed_in? then %>
+                <%= link_to users_mypage_path do %>
+                  <li class="nav-list-item">
+                    <%= image_tag 'mypage-icon.png', size: "30x30" %>
+                    <div>マイページ</div>
+                  </li>
+                <% end %>
+                <%= link_to new_post_path do %>
+                  <li class="nav-list-item">
+                    <%= image_tag 'post-icon.png', size: "30x30" %>
+                    <div>投稿する</div>
+                  </li>
+                <% end %>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <li class="nav-list-item">
+                    <%= image_tag 'logout-icon.png', size: "30x30" %>
+                    <div>ログアウト</div>
+                  </li>
+                <% end %>
+              <% else %>
+                <li class="nav-list-item">
+                  <a><%= link_to "ゲストログイン", public_guest_sign_in_path, method: :post, class: "login" %></a>
+                </li>
+                <li class="nav-list-item">
+                  <a><%= link_to "ログイン", new_user_session_path %></a>
+                </li>
+                <li class="nav-list-item">
+                  <a><%= link_to "管理者ログイン", new_admin_session_path %></a>
+                </li>
+                <li class="nav-list-item">
+                  <a><%= link_to "ユーザ登録", new_user_registration_path %></a>
+                </li>
+              <% end %>
             </ul>
           </div>
-        </nav>
-      <% elsif user_signed_in? then %>
-        <div class="logo">
-          <%= link_to root_path do %>
-            <%= image_tag 'HRC_Logo.png', size: "150x150" %>
-          <% end %>
         </div>
-        <div class="search">
-          <%= render 'public/searches/search' %>
-          <%= link_to 'カテゴリから選ぶ >>', categories_path %>
-        </div>
-        <nav>
-          <div class="menu-list">
-            <ul class="list">
-              <li>
-                <%= link_to "マイページ", users_mypage_path %>
-              </li>
-              <li>
-                <%= link_to "ユーザ情報編集", edit_user_path(current_user) %>
-              </li>
-               <li>
-                <%= link_to "投稿する", new_post_path %>
-              </li>
-              <li>
-                <%= link_to "ログアウト",destroy_user_session_path, method: :delete %>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      <% else %>
-        <div class="logo">
-          <%= link_to root_path do %>
-            <%= image_tag 'HRC_Logo.png', size: "150x150" %>
-          <% end %>
-        </div>
-        <nav>
-          <div class="menu-list">
-            <ul class="list">
-              <li>
-                <%= link_to "ゲストログイン", public_guest_sign_in_path, method: :post, class: "login" %>
-              </li>
-              <li>
-                <%= link_to "ログイン", new_user_session_path %>
-              </li>
-              <li>
-                <%= link_to "管理者ログイン", new_admin_session_path %>
-              </li>
-               <li>
-                <%= link_to "ユーザ登録", new_user_registration_path %>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      <% end %>
+      </nav>
     </header>
     <%= yield %>
     <footer>
