--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,22 +1,23 @@
  <%= flash[:notice] %>
 <div class="container">
   <h4>投稿編集</h4>
-  <div class="row">
+  <div class="row justify-content-center">
     <%= form_with model: @post, url: post_path(@post), method: :patch do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
-      <div class="row">
+      <div class="col-12">
+        
         <span>タイトル</span>
         <%= f.text_field :title %>
       </div>
-      <div class="row">
+      <div class="col-12">
         <span>トップ画像</span>
         <%= f.file_field :post_image,accept: "image/*" %>
       </div>
-      <div class="row">
+      <div class="col-12">
         <span>説明</span>
         <%= f.text_field :introduction %>
       </div>
-      <div class="row">
+      <div class="col-12">
         <span>カテゴリ</span>
         <div class="field">
           <%= collection_check_boxes(:post, :category_ids, Category.all, :id, :category_name ) do |t|  %>
@@ -24,9 +25,9 @@
           <% end %> 
         </div>
       </div>
-      <div class="row">
-        <span>用意するもの</span>
-        <%= link_to_add_association "追加ボタン", f, :cleaning_tools, class: 'add_fields',
+      <div class="col-12">
+        <span>掃除道具</span>
+        <%= link_to_add_association "フォーム追加", f, :cleaning_tools, class: 'add_fields',
           data: {
             association_insertion_node: '#detail-association-insertion-point',
             association_insertion_method: 'after'
@@ -40,32 +41,30 @@
         </div>
       </div>
       
-      <div class="row">
+      <div class="col-12">
         <span>掃除方法</span>
         <div class="add-botton-box">
-          <%= link_to_add_association "追加ボタン", f, :cleaning_recipes, class: 'add_fields', id: 'add-btn',
+          <%= link_to_add_association "フォーム追加", f, :cleaning_recipes, class: 'add_fields', id: 'add-btn',
             data: {
               association_insertion_node: '#detail-association-insertion-point2',
               association_insertion_method: 'append'
               } 
           %>
         </div>
-        <%#= f.fields_for :recipe_image,accept: "image/*" %>
-        <%#= f.fields_for :cleaning_recipe, placeholder: "説明文" %>
         <div id="detail-association-insertion-point2">
           <%= f.fields_for :cleaning_recipes do |form| %>
             <%= render "cleaning_recipe_fields", f: form %>
           <% end %>
         </div>
       </div>
-      <div class="row">
+      <div class="col-12">
         <% if @post.is_publish == false %>
-          <%= f.submit "上書き保存", :name => 'update_draft', class: "btn btn-primary" %>
-          <%= f.submit "下書き投稿", :name => 'change_publish', class: "btn btn-success" %>
+          <%= f.submit "下書きのまま保存", :name => 'update_draft', class: "btn btn-primary" %>
+          <%= f.submit "下書きを投稿", :name => 'change_publish', class: "btn btn-success" %>
           <%= link_to "削除", post_path(@post), method: :delete, 
             data: {confirm: "下書きを削除します。よろしいですか？"}, class: "btn btn-danger"%>
         <% else @post.is_publish == true %>
-          <%= f.submit "投稿を更新", :name => 'update_post', class: "btn btn-primary" %>
+          <%= f.submit "投稿内容を更新", :name => 'update_post', class: "btn btn-primary" %>
           <%= link_to "削除", post_path(@post), method: :delete, 
             data: {confirm: "投稿を削除します。よろしいですか？"}, class: "btn btn-danger"%>
         <% end %>
