--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,13 +1,41 @@
 <div class="container">
   <h1>検索結果一覧</h1>
   <div class="row">
-    　該当ユーザ
-        <% @users.each do |user| %>
-          <%= link_to "#{user.user_name}", user_path(user.id) %>
-        <% end %>
-      該当の
-        <% @posts.each do |post| %>
-          <%= link_to post.title, search_path %>
-        <% end %>
+    <div class="col-6">
+      <div class="row">
+        <div class="col-12">
+      　  該当ユーザ
+      　</div>
+      　<div class="col-12">
+        　<% if @users.presence %>
+            <% @users.each do |user| %>
+              <div class="col-6">
+                <%= link_to "#{user.user_name}", user_path(user.id) %>
+              </div>
+            <% end %>
+          <% else %>
+            検索条件と一致するユーザは見つかりませんでした。
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="row">
+        <div class="col-12">
+          該当の投稿
+        </div>
+        <div class="col-12">
+          <% if @posts.presence %>
+            <% @posts.each do |post| %>
+              <div class="col-12">
+                <%= link_to post.title, search_path %>  
+              </div>
+            <% end %>
+          <% else %>
+            検索条件と一致する投稿は見つかりませんでした。
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
