--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,19 +1,41 @@
 <p><%= flash[:notice] %></p>
 <div class="container">
   <h1>ユーザ情報</h1>
-  <div class="row">
+  <div class="row justify-content-center">
     <%= form_with model: @user, url: user_path  do |f| %>
     <%= render 'layouts/error_messages', model: f.object %>
-      <p>ニックネーム</p>
-      <%= f.text_field :user_name %>
-      <p>メールアドレス</p>
-      <%= f.text_field :email %>
-      <p>プロフ画像</p>
-      <%= f.file_field :profile_image %>
-      <p>プロフィール</p>
-      <%= f.text_area :self_introduction %>
-      <%= f.submit "更新" %>
+      <div class="col-12">
+        ニックネーム
+      </div>
+      <div class="col-12">
+        <%= f.text_field :user_name %>
+      </div>
+      <div class="col-12">
+        メールアドレス
+      </div>
+      <div class="col-12">
+        <%= f.text_field :email %>
+      </div>
+      <div class="col-12">
+        プロフィール画像
+      </div>
+      <div class="col-12">
+        <%= f.file_field :profile_image %>
+      </div>
+      <div class="col-12">
+        プロフィール
+      </div>
+      <div class="col-12">
+        <%= f.text_area :self_introduction %>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <%= f.submit "更新", class: "btn btn-success" %>
+        </div>
+        <div class="col-6">
+          <%= link_to "退会する", users_confirm_path, class: "btn btn-danger" %>
+        </div>
+      </div>
     <% end %>
-    <%= link_to "退会する", users_confirm_path %>
   </div>
 </div>
