--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -2,18 +2,30 @@
  <div class="container">
   <h1>マイページ</h1>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
       <%= link_to user_path(current_user) do %>
         <%= image_tag @user.get_profile_image(100,100) %>
       <% end %>
-      <p>プロフィール</p>
-      <%= @user.self_introduction %>
+      <div class="row">
+        <p>プロフィール</p>
+      </div>
+      <div class="row">
+        <%= @user.self_introduction %>
+      </div>
+      <div class="row">
+        <%= link_to "ユーザ情報編集", edit_user_path(current_user) %>
+      </div>
+      <div class="row">
+        <%= link_to "いいねした投稿一覧", my_likes_posts_path %>
+      </div>
+      <div class="row">
+        <%= link_to "コメントした一覧", my_comments_posts_path %>
+      </div>
     </div>
-    <div class="col-md-6">
-      <%= link_to "いいねした投稿一覧", my_likes_posts_path %>
+    <div class="col-md-8">
+     
+      <p>作成中のお掃除レシピ　全<%= @draft_posts.count %>件</p>
       
-      <%= link_to "コメントした一覧", my_comments_posts_path %>
-      <p>作成中のお掃除レシピ</p>全<%= @draft_posts.count %>件
         <% if @draft_posts.present? %>
           <% @draft_posts.each do |draft_post| %>
           <div class="row">
@@ -24,9 +36,10 @@
         <% else %>
           現在作成中のレシピはありません
         <% end %>
-      <%= link_to "作成中投稿一覧", posts_draft_path(@draft_posts) %>
+      <%= link_to "作成中投稿一覧へ", posts_draft_path(@draft_posts) %>
       
-      <p>投稿したお掃除レシピ</p>全<%= @posts.count %>件
+      <p>投稿したお掃除レシピ　全<%= @posts.count %>件</p>
+      
         <% if @posts.present? %>
           <% @posts.each do |post| %>
             <div class="row">
@@ -38,8 +51,7 @@
         <% else %>
           現在投稿したレシピはありません
         <% end %>
-      
-      <%= link_to "投稿一覧", posts_path(@posts) %>
+      <%= link_to "投稿一覧へ", post_list_user_path(current_user.id) %>
     </div>
   </div>
 </div>
