--- a/app/views/public/users/post_list.html.erb
+++ b/app/views/public/users/post_list.html.erb
@@ -1,14 +1,21 @@
-<div class="container">
-  <h1>トップページ</h1>
+<div class="container"></div>
+  <h1>
+    <% if @user.user_name.present? %>
+      <%= @user.user_name %>
+    <% else %>
+      ユーザネーム未登録
+    <% end %>
+      の投稿一覧
+  </h1>
     <div class="row">
         <% @posts.each do |post| %>
           <div class="col-md-4">
             <%= link_to post_path(post.id) do %>
-              <div class="post-item">
+              <div class="row">
                 <%= image_tag post.get_post_image(250,200) %>
               </div>
               <div class="row">
-                <%= image_tag post.user.get_profile_image(30,30) %>
+                <%= image_tag post.user.get_profile_image(50,50) %>
                 <% if post.user.user_name.present? %>
                   <%= post.user.user_name %>
                 <% else %>
@@ -19,11 +26,9 @@
                 <%= post.title %><br>
                 ♡<%= post.likes.count %><br>
                 <% post.categories.each do |category| %>
-                  <!--<div class="category-tag">-->
-                    <%= category.category_name %>
-                  <!--</div>-->
+                  <%= category.category_name %>
                 <% end %>
-                <p><%= post.introduction %></p>
+                <%= post.introduction %>
               </div>
             <% end %>
           </div>
@@ -31,4 +36,3 @@
         <%= paginate @posts %>
     </div>
 </div>
-
