--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,29 +1,37 @@
 @import '~bootstrap/scss/bootstrap';
 
 *{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   color: #6c6b6b;
 }
 
-a{
-  text-decoration:none;
-}
+// ヘッダーCSS
 
 header{
-  width:100%;
+  width: 100%;
   // // height:120px;　反映なし
-  padding:15px 0;
-  margin:0 auto;
-  height:150px;
+  // padding:15px 0;
+  margin: 1em auto 0em auto;
+  // height:10em;
   // display: flex;
-  border-bottom:solid 1px #00ced1;
+  text-decoration: none;
+  margin-bottom: 30px;
 }
 
-.navbar-brand{
-  margin-bottom:20px;  
+.header-line {
+  width: 100%;
+  border-bottom: solid 1px #00ced1;
 }
+
+//.navbar-brand{/*反映無し*/
+//  margin-bottom:20px;  
+//}
+
+// .logo{/*反映無し*/
+//   margin-bottom:20px;  
+// }
 
 .search{
   margin-left:50px;
@@ -31,26 +39,161 @@ header{
 }
 
 .nav-list-item {
-  padding: 0 30px;
-  margin-top:60px;
-  border-left:solid 1px #00ced1;
-  text-align:center;
+  // padding: 0 30px;
+  // margin-top:60px;
+  border-left: solid 1px #00ced1;
+  text-align: center;
+  vertical-align: bottom;
 }
 
 .i{
-  width:30px;
-  height:30px;
+  width: 30px;
+  height: 30px;
 }
 
 .image{
   vertical-align: middle;
 }
 
+
+// ログイン画面CSS
+.login-field{
+  margin: 10px 0px 10px;
+}
+
+// ユーザ登録画面CSS
+.registration-field{
+  margin: 10px 0px 10px;
+}
+
+// 全ページ共通CSS
+
+h4{
+  margin: 30px 0px;
+}
+
+// トップページCSS
+
+.post-box{
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.post-img{
+  position: relative;
+  margin-bottom: 20px;
+  width: 45%;
+  
+  img {
+    width: 100%;
+  }
+}
+
+.like{ 
+  width: 4rem;
+  height: 2rem;
+  color:#ff69b4;
+  background-color:#ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  border-radius: 20%;
+  cursor: pointer;
+  
+  position: absolute;
+  top: 3%;
+  left: 60%;
+}
+
+.category { 
+  // padding: 0.1em 0.3em;
+  // margin: 1em;
+  color: #4682b4;
+  background: #f0f8ff;
+  border: solid 0.5px #b0c4de;
+  border-radius: 10px;
+}
+
+.category-index { 
+  padding: 0.1em 0.3em;
+  margin: 1em;
+}
+
+.category-tag { 
+  padding: 0.1em 0.3em;
+  margin: 0.2em;
+  
+}
+
+.category-area{
+  margin: 10px;
+}
+
+// 詳細ページCSS
+
+#show-like{
+  padding: 1% 2%;
+  background-color:#ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  border-radius: 20%;
+  cursor: pointer;
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  
+  a {
+    color:#ff69b4;
+  }
+}
+
+.intro{
+  border: solid 0.5px #afeeee;
+  border-radius: 5%;
+  margin: 20px;
+  padding: 1%;
+}
+
+
+
+.tool{
+  border-bottom: solid 0.5px #afeeee;
+  margin: 20px;
+}
+
+.recipe{
+  border-bottom: solid 0.5px #afeeee;
+  margin: 10px;
+  padding: 10px;
+}
+
+.comment-box{
+  margin: 1%;
+  
+  form{
+    width: 80%;
+  }
+  textarea{
+    width: 100%;
+  }
+  comment-list{
+    margin: 1%;
+    padding: 2%;
+    border-bottom: solid 0.5px #afeeee;
+  }
+}
+
+// フッターCSS
+
 footer{
-  width:100%;
-  height:120px;
-  text-align:center;
-  line-height:120px;
+  width: 100%;
+  height: 120px;
+  margin-top: 30px;
+  text-align: center;
+  line-height: 120px;
   background-color:#b0e0e6;
 }
 
