--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,29 +1,29 @@
 <div class="container">
-  <h1>トップページ</h1>
+  <h4>新着お掃除レシピ</h4>
     <div class="row">
         <% @posts.each do |post| %>
-          <div class="col-md-4">
+          <div class="col-lg-4 post-box">
             <%= link_to post_path(post.id) do %>
-              <div class="post-item">
-                <%= image_tag post.get_post_image(250,200) %>
-              </div>
               <div class="row">
-                <%= image_tag post.user.get_profile_image(30,30) %>
-                <% if post.user.user_name.present? %>
-                  <%= post.user.user_name %>
-                <% else %>
-                  未登録
-                <% end %>
-              </div>
-              <div class="row">
-                <%= post.title %><br>
-                ♡<%= post.likes.count %><br>
-                <% post.categories.each do |category| %>
-                  <!--<div class="category-tag">-->
-                    <%= category.category_name %>
-                  <!--</div>-->
-                <% end %>
-                <p><%= post.introduction %></p>
+                <div class="post-img">
+                  <%= image_tag post.get_post_image(250,200) %>
+                  <div class="like">
+                    ♡<%= post.likes.count %>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="post-title">
+                    <strong><%= post.title %></strong><br>
+                  </div>
+                  <div class="user-info">
+                    <%= image_tag post.user.get_profile_image(30,30) %>
+                    <% if post.user.user_name.present? %>
+                      <%= post.user.user_name %>
+                    <% else %>
+                      未登録
+                    <% end %>
+                  </div>
+                </div>
               </div>
             <% end %>
           </div>
