--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,25 +1,22 @@
 <p><%= flash[:notice] %></p>
 <div class="container">
-    <h1>投稿詳細</h1>
-    <div class="row">
-      <div class="col-5">
-        <%= image_tag @post.get_post_image(200,200) %>
-        
-      </div>
-      <div class="col-5">
-        <div class="row">
-          タイトル：<%= @post.title %>
-        </div>
-        <div class="row">
-          <span>説明：</span>
-          <%= @post.introduction %>
-        </div>
-        <div class="row">
-          <%= image_tag @user.get_profile_image(50,50) %>
-          <%= link_to @user.user_name, user_path(@user.id) %>
-        </div>
-        <div class="row">
-          <span>いいね</span>
+  <div class="row">
+    <div class="col-lg-10">
+      <h2><%= @post.title %></h2>
+    </div>
+    <div class="col-lg-2">
+      <% if @post.user == current_user %>
+        <%= link_to "編集", edit_post_path(@post), class: "btn btn-success" %>
+      <% end %>
+    </div>
+  </div>
+  
+  
+  <div class="row">
+    <div class="post-img">
+      <%= image_tag @post.get_post_image(400,400) %>
+      <div id="show-like">
+        <% if user_signed_in? %>
           <% if @post.liked_by?(current_user) %>
             <%= link_to post_likes_path(@post), method: :delete do %>
               ♥<%= @post.likes.count %>
@@ -29,74 +26,92 @@
               ♡<%= @post.likes.count %>
             <% end %>
           <% end %>
-        </div>
-        <div class="row">
-          <span>カテゴリ：</span>
-          <% @post.categories.each do |category| %>
-            <%= category.category_name %>
-          <% end %>
-        </div>
-        <div class="row">
-          <span>作成日時：</span>
-          <%= @post.created_at.strftime('%Y/%m/%d') %>
-        </div>
-      </div>
-      <div class="col-2">
-        <% if @post.user == current_user %>
-          <%= link_to "編集", edit_post_path(@post), class: "btn btn-success" %>
+        <% else %>
+          ♡<%= @post.likes.count %>
         <% end %>
       </div>
+    </div>
+  </div>
+    <div class="row">
+        <div class="col-lg-12 intro">
+          <%= @post.introduction %>
+        </div>
+        <div class="col-lg-12 user_info">
+          作成者：<%= image_tag @user.get_profile_image(50,50) %>
+          <%= link_to @user.user_name, user_path(@user.id) %>
+        </div>
+        <div class="col-lg-12">
+          作成日時：<%= @post.created_at.strftime('%Y/%m/%d') %>
+        </div>
+        <div class="col-lg-12 category-area flex-row d-flex flex-wrap">
+          <% @post.categories.each do |category| %>
+            <div class="category category-tag">
+              <%= category.category_name %>
+            </div>
+          <% end %>
+        </div>
     </div>
 
     <div class="row">
-      <div class="col-12">
-      <span>掃除道具</span>
+      <div class="col-lg-12 tool">
+        <p>掃除道具</p>
+        <% @post.cleaning_tools.each do |cleaning_tool| %>
+          ・<%= cleaning_tool.cleaning_tool_name %><br>
+          </div>
+        <% end %>
       </div>
-      <% @post.cleaning_tools.each do |cleaning_tool| %>
-        ・<%= cleaning_tool.cleaning_tool_name %><br>
-      <% end %>
-      <div class="col-12">
-      <span>掃除方法</span>
-      </div>
-      <% @post.cleaning_recipes.each do |cleaning_recipe| %>
-        <div class="col-6">
-          <%= image_tag cleaning_recipe.get_recipe_image(100,100) %>
-        </div>
-        <div class="col-6">
-          <%= cleaning_recipe.cleaning_recipe %>
-        </div>
-      <% end %>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <%= form_with model: [@post, @post_comment] do |f| %>
-        <%= render 'layouts/error_messages', model: f.object %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに記述" %>
-          <%= f.submit "送信", class: "btn btn-success" %>
+      <div class="col-lg-12">
+        <p>掃除方法</p>
+        <% @post.cleaning_recipes.each do |cleaning_recipe| %>
+          <div class="row recipe">
+            <div class="col-lg-4">
+              <%= image_tag cleaning_recipe.get_recipe_image(100,100) %>
+            </div>
+            <div class="col-lg-8">
+              <%= cleaning_recipe.cleaning_recipe %>
+            </div>
+          </div>
         <% end %>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
-        <p>コメント件数：<%= @post.comments.count %></p>
+      <div class="col-lg-12 d-flex justify-content-center">
+        コメントする
       </div>
-      
+      <div class="col-lg-12 comment-box d-flex justify-content-center">
+        <%= form_with model: [@post, @post_comment] do |f| %>
+          <%= render 'layouts/error_messages', model: f.object %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに記述" %>
+          <span class="action d-flex justify-content-center align-items-center">
+            <%= f.submit "送信", class: "btn btn-success" %>
+          </span>
+        <% end %>
+      </div>
+    </div>
+    <div class="row comment-box justify-content-center">
+      <!--<div class="col-lg-12 d-flex justify-content-center align-items-center">-->
+        コメント件数：<%= @post.comments.count %>件
+      <!--</div>-->
+    </div>
+    <div class="col-lg-12 comment-box">
       <% @post.comments.each do |comment| %>
-        <div class="col-2">
-          <%= image_tag comment.user.get_profile_image(50,50) %>
-          <%= comment.user.user_name %>
-        </div>
-        <div class="col-6">
-          <%= comment.comment %>
-        </div>
-        <div class="col-2">
-          <%= comment.created_at.strftime('%Y/%m/%d') %>
-        </div>
-        <div class="col-2">
-          <% if comment.user == current_user %>
-            <%= link_to "削除", post_comment_path(comment.id), method: :delete, class: "btn btn-danger",
-              data: {confirm: "コメントを削除します。よろしいですか？"} %>
-          <% end %>
+        <div class="row comment-list">
+          <div class="col-lg-2">
+            <%= image_tag comment.user.get_profile_image(50,50) %>
+            <%= comment.user.user_name %>
+          </div>
+          <div class="col-lg-6">
+            <%= comment.comment %>
+          </div>
+          <div class="col-lg-2">
+            <%= comment.created_at.strftime('%Y/%m/%d') %>
+          </div>
+          <div class="col-lg-2">
+            <% if comment.user == current_user %>
+              <%= link_to "削除", post_comment_path(comment.id), method: :delete, class: "btn btn-danger",
+                data: {confirm: "コメントを削除します。よろしいですか？"} %>
+            <% end %>
+          </div>
         </div>
       <% end %>
     </div>  
