--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>ユーザ新規登録</h2>
-
-<%= form_with model: User, url: user_registration_path do |f| %>
+<div class="container">
   <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="row justify-content-center">
+    <%= form_with model: User, url: user_registration_path do |f| %>
+      <div class="col-12 registration-field">
+        <%= f.label :email, "メールアドレス" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="col-12 registration-field">
+        <%= f.label :password, "パスワード" %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> 文字以上)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+      <div class="col-12 registration-field">
+        <%= f.label :password_confirmation, "パスワードの確認" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+      <div class="col-12 registration-field d-flex justify-content-center align-items-center">
+        <%= f.submit "ユーザ登録", class: "btn btn-success" %>
+      </div>
+    <% end %>
+    <div class="col-12 registration-field d-flex justify-content-center align-items-center">
+      すでにユーザ登録をされている方は、こちらからログインください。
+    </div>
+    <div class="col-12 registration-field d-flex justify-content-center align-items-center">
+   　　<%= link_to "ログインはこちら", new_user_registration_path, class: "btn btn-success"  %>
+   　  <%#= render "public/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
