--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -3,7 +3,7 @@
     <% @category.each do |category| %>
       <div class="col-lg-2 col-md-4 col-sm-6">
         <%= link_to posts_path(category_id: category.id) do %>
-          <div class="category category-index">
+          <div class="category-tag category-index">
             <%= category.category_name %>
           </div>
         <% end %>
