--- a/app/views/public/posts/draft.html.erb
+++ b/app/views/public/posts/draft.html.erb
@@ -1,32 +1,26 @@
 <div class="container">
-  <h1>作成中投稿一覧</h1>
-  全<%= @posts.count %>件
-    <div class="row">
-      <% @draft_posts.each do |post| %>
-        <div class="col-md-4">
-          <%= link_to post_path(post.id) do %>
-            <div class="row">
-              <%= image_tag post.get_post_image(250,200) %>
-            </div>
-            <div class="row">
-              <%= image_tag post.user.get_profile_image(50,50) %>
-              <% if post.user.user_name.present? %>
-                <%= post.user.user_name %>
-              <% else %>
-                未登録
-              <% end %>
-            </div>
-            <div class="row">
-              <%= post.title %><br>
-              ♡<%= post.likes.count %><br>
-              <% post.categories.each do |category| %>
-                <%= category.category_name %><br>
-              <% end %>
-              <%= post.introduction %>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
-      <%= paginate @draft_posts %>
+  <h4>
+    作成中投稿一覧
+    <span class="num-items">全<%= @posts.count %>件</span>
+  </h4>
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th scope="col">タイトル</th>
+          <th scope="col">更新日</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @draft_posts.each do |post| %>
+          <tr class="rough-draft">
+            <td class="title"><%= post.title %></td>
+            <td class="date"><%= post.updated_at.strftime('%Y/%m/%d') %></td>
+            <td class="edit-btn"><%= link_to "編集", post_path(post.id), class: "btn btn-success"  %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= paginate @draft_posts %>
     </div>
 </div>
