--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,38 +1,38 @@
 <p><%= flash[:notice] %></p>
 <div class="container">
-  <h1>ユーザ情報</h1>
+  <h4>ユーザ情報</h4>
   <div class="row justify-content-center">
     <%= form_with model: @user, url: user_path  do |f| %>
     <%= render 'layouts/error_messages', model: f.object %>
-      <div class="col-12">
+      <div class="col-lg-12 user-info">
         ニックネーム
       </div>
-      <div class="col-12">
-        <%= f.text_field :user_name %>
+      <div class="col-lg-12 user-info">
+        <%= f.text_field :user_name ,class: "form-expand" %>
       </div>
-      <div class="col-12">
+      <div class="col-lg-12 user-info">
         メールアドレス
       </div>
-      <div class="col-12">
-        <%= f.text_field :email %>
+      <div class="col-lg-12 user-info">
+        <%= f.text_field :email ,class: "form-expand" %>
       </div>
-      <div class="col-12">
+      <div class="col-lg-12 user-info">
         プロフィール画像
       </div>
-      <div class="col-12">
-        <%= f.file_field :profile_image %>
+      <div class="col-lg-12 user-info">
+        <%= f.file_field :profile_image ,class: "form-expand" %>
       </div>
-      <div class="col-12">
+      <div class="col-lg-12 user-info">
         プロフィール
       </div>
-      <div class="col-12">
-        <%= f.text_area :self_introduction %>
+      <div class="col-lg-12 user-info">
+        <%= f.text_area :self_introduction ,class: "text-area" %>
       </div>
-      <div class="row">
-        <div class="col-6">
+      <div class="row justify-content-between">
+        <div class="col-lg-3 user-info">
           <%= f.submit "更新", class: "btn btn-success" %>
         </div>
-        <div class="col-6">
+        <div class="col-lg-3 user-info">
           <%= link_to "退会する", users_confirm_path, class: "btn btn-danger" %>
         </div>
       </div>
