--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,21 +1,27 @@
 <%= flash[:notice] %>
 <div class="container">
     <h1>ユーザ情報詳細</h1>
-    <div class="row justify-content-center">
-      <div class="col-4">
-        <%= image_tag @user.get_profile_image(200,200) %>
-      </div>
-      <div class="col-8">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="row user-img">
+          <%= image_tag @user.get_profile_image(200,200) %>
+        </div>
         <div class="row">
-          <div class="col-4">
+          <%= link_to "ユーザ情報編集", edit_user_path(current_user), class: "btn btn-success" %>
+        </div>
+      </div>
+      
+      <div class="col-lg-8">
+        <div class="row profile">
+          <div class="col-lg-4">
             ニックネーム
           </div>
-          <div class="col-8">
+          <div class="col-lg-8">
               <%= @user.user_name %>
           </div>
         </div>
         <% if @user.id = current_user.id %>
-          <div class="row">
+          <div class="row profile">
             <div class="col-4">
               メールアドレス
             </div>
@@ -23,32 +29,34 @@
               <%= @user.email %>
             </div>
           </div>
+        <% else %>
+        
         <% end %>
-        <div class="row">
-          <div class="col-4">
+        <div class="row profile">
+          <div class="col-lg-4">
             プロフィール
           </div>
-          <div class="col-8">
+          <div class="col-lg-8">
             <%= @user.self_introduction %>
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-lg-6">
             これまでに投稿したレシピ
           </div>
-          <div class="row">
-            <% @posts.each do |post| %>
-              <div class="col-8">
-                <%= link_to post.title, post_path(post.id)  %>
-              </div>
-              <div class="col-4">
-                <%= post.created_at.strftime("%Y/%m/%d")  %>
-              </div>
-            <% end %>
-            <%= link_to "投稿一覧へ", post_list_user_path(@user.id) %>
+          <div class="col-lg-6">
+             <%= link_to "投稿一覧へ", post_list_user_path(@user.id) %>
           </div>
         </div>
+        <% @posts.each do |post| %>
+            <div class="col-lg-12 profile-list">
+              <%= link_to post.title, post_path(post.id)  %>
+              <%= post.updated_at.strftime("%Y/%m/%d")  %>
+            </div>
+        <% end %>
+        <div class="row justify-content-end w-100">
+          ※更新順で10件まで表示
+        </div>
       </div>
-      <%= link_to "編集", edit_user_path(current_user), class: "btn btn-success" %>
     </div>
 </div>
