--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,22 +1,22 @@
 <%= flash[:notice] %>
 <div class="container">
   <h4>新規投稿</h4>
-  <div class="row">
+  <!--<div class="row justify-content-center">-->
     <%= form_with model: @post, url: posts_path do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
-      <div class="row">
+      <div class="row justify-content-center">
         <span>タイトル</span>
         <%= f.text_field :title %>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <span>トップ画像</span>
         <%= f.file_field :post_image,accept: "image/*" %>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <span>説明</span>
         <%= f.text_area :introduction %>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <span>カテゴリ</span>
         <div class="field">
           <%= collection_check_boxes(:post, :category_ids, Category.all, :id, :category_name ) do |t|  %>
@@ -25,7 +25,7 @@
         </div>
       </div>
       
-      <div class="row">
+      <div class="row justify-content-center">
         <span>用意するもの</span>
         <div class="add-botton-box">
           <%= link_to_add_association "追加ボタン", f, :cleaning_tools,
@@ -43,7 +43,7 @@
           <% end %>
         </div>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <span>掃除方法</span>
         <div class="add-botton-box">
           <%= link_to_add_association "追加ボタン", f, :cleaning_recipes,
@@ -64,6 +64,6 @@
       <%= f.submit "下書き保存", :name => 'draft_post', class: "btn btn-primary" %>
       <%= f.submit "投稿", name: "true_post", class: "btn btn-success" %>
     <% end %>
-  </div>
+  <!--</div>-->
   
 </div>
